turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:15: error: value ORANCE is not a member of object java.awt.Color
  quart(Color.ORANCE)
              ^