turtleart.diskfour.DiskFour.scala.code
def quart(c:Color){
  setCouleur(c)
  for (i<- 1 to 90){
    avance(100)
    recule(100)
    droite(1)
  }
  
}

override def run(){
  
  quart(Color.BLACK)
  quart(Color.RED)
  quart(Color.ORANCE)
  quart(Color.MAGENTA)
  
  
  
}